# asset_placer_isaac

./: .gitignore  2026-02-13-experiment-plan-step-by-step.md  20260215-codex-instructions-eval-loop-task-points.md  20260216-codex-instructions-eval-loop-entry-observability.md  AGENTS.md  CLAUDE.md  README.md  SESSION_HANDOVER_20260218.md  premake5.lua  pyproject.toml
.claude/: settings.local.json.example
config/: extension.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPENDENCIES.md  KNOWN_ISSUES.md  Overview.md  README.md  REPORT_20260118.md  REPORT_20260120.md  REPORT_20260217.md  SETUP.md  SYSTEM_DESIGN.md  TROUBLESHOOTING.md
experiments/: .gitignore  2026-02-17-visualization-implementation-plan.md  CHANGELOG.md  README.md  REPORT_20260217_eval_loop_update.md
experiments/configs/eval/: default_eval.json
experiments/configs/trials/: sample_exp_a.json
experiments/configs/v0_freeze/: sample_v0_freeze.json
experiments/src/: compare_layout.py  eval_metrics.py  layout_tools.py  plot_layout_json.py  refine_heuristic.py  run_trial.py  run_v0_freeze.py  task_points.py
inputs_isaac/: dimensions_2.txt  dimensions_big_house.txt  dimensions_floor_plan3.txt  dimensions_garage.txt  dimensions_komaB130.txt  dimensions_kugaA18.txt  dimensions_oizuC24.txt  dimensions_sugiB23.txt  dimensions_sugiC30.txt  dimensions_two-story_1.txt  prompt_1.txt  prompt_1_universal_v4.txt  prompt_2.txt  prompt_2_universal_v4.txt  prompt_marge.txt  prompt_step1_universal_v7.txt  prompt_step2_universal_v7.txt
inputs_isaac/20260217_prompt/: prompt_2.txt
(+20 files in other folders)
