[project]
name = "my-research-asset-placer-isaac-dev"
version = "0.1.0"
description = "Development environment for Isaac Sim asset placer extension and experiments"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.21.2",
  "openai>=1.0.0",
  "opencv-python==4.10.0.84",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
experiments = [
  "matplotlib>=3.8.0",
]

[tool.uv]
package = false
